# arduino-3d-lidar

./: .gitignore  LICENSE  README.md  pyproject.toml  test.txt
arduino-code/: write_byte_output_batchwise.ino
data/sequences/01/lidar_points/: 2022-08-06_08-37-28_697168.npy  2022-08-06_08-37-30_267624.npy  2022-08-06_08-37-31_324559.npy  2022-08-06_08-37-31_871852.npy  2022-08-06_08-37-33_462379.npy  2022-08-06_08-37-34_396251.npy  2022-08-06_08-37-36_982108.npy  2022-08-06_08-37-38_513941.npy  2022-08-06_08-37-38_973604.npy  2022-08-06_08-37-41_562135.npy  2022-08-06_08-37-42_465890.npy  2022-08-06_08-37-43_978196.npy  2022-08-06_08-37-45_403791.npy  2022-08-06_08-37-46_024989.npy  2022-08-06_08-37-46_494351.npy  2022-08-06_08-37-48_436367.npy  2022-08-06_08-37-48_971088.npy  2022-08-06_08-37-52_522093.npy  2022-08-06_08-37-53_520862.npy  2022-08-06_08-37-54_092265.npy  2022-08-06_08-37-55_045352.npy  2022-08-06_08-37-56_619772.npy  2022-08-06_08-38-00_772835.npy  2022-08-06_08-38-01_254856.npy  2022-08-06_08-38-02_258150.npy  2022-08-06_08-38-02_759144.npy  2022-08-06_08-38-03_739338.npy  2022-08-06_08-38-04_710146.npy  2022-08-06_08-38-05_199904.npy  (+98 more)
esp32-code/: write_byte_output_batchwise_esp32.ino
esp32-code/write_byte_output_batchwise_esp32/: write_byte_output_batchwise_esp32.ino
python-receiver-code/: live_visualization.py  offline_visualization.py  receive_data.py  requirements.txt
stl-files/: assembly-instructions.md  base_bottom_v0.6.stl  base_top_v0.6.stl  encoder_v0.6.stl  head_v0.6.stl  single_pillar_v0.6.stl  small_gear_v0.6.stl
